Working example with JPA-RS.
Signed-off-by: Tomáš Kraus <tomas.kraus@oracle.com>